# app-hoist

./: Cargo.toml  README.md
.app-hoist/templates/svelte-ts-bun/: README.md  package.json  template.toml
.app-hoist/templates/svelte-ts-bun/src/lib/: counter.ts
.app-hoist/templates/svelte-ts-bun/src/routes/: +page.svelte  +page.ts
.app-hoist/templates/test-template/: README.md  template.toml
.github/workflows/: ci.yml
src/: cache.rs  cli.rs  docker.rs  interactive.rs  main.rs  models.rs  multi_project.rs  package.rs  project.rs  template.rs  utils.rs
