[package]
name = "app-hoist"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
inquire = { version = "0.6", features = ["date"] }
regex = "1.0"
anyhow = "1.0"
dirs = "5.0"
toml = "0.8"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
indicatif = "0.17"
num_cpus = "1.0"
